--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -1,6 +1,5 @@
-@use '../custom' as *;
-@use '../components/mixins' as *;
-
+@use "../custom" as *;
+@use "../components/mixins" as *;
 
 #portfolio {
     @include gradient;
@@ -12,7 +11,10 @@
     & img {
         width: 100%;
         height: 100%;
-        filter: grayscale(100%);   
+
+        object-fit: cover;
+
+        filter: grayscale(100%);
         -webkit-filter: grayscale(100%);
 
         &:hover {
@@ -21,4 +23,17 @@
         }
     }
 
+    p.github-link {
+        text-align: center;
+        & > a {
+            color: black;
+            text-decoration: none;
+            margin-top: 0.5rem;
+            transition: color 0.5s;
+
+            &:hover {
+                color: $white;
+            }
+        }
+    }
 }
