--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -1,4 +1,4 @@
-@use '../custom' as *;
+@use "../custom" as *;
 
 #skills {
     .heading {
@@ -7,10 +7,15 @@
         }
     }
 
+    .container h3 {
+        text-align: center;
+        font-size: 1.5rem;
+    }
+
     .progress {
         height: 45px;
         margin: 30px 20px;
-        
+
         &:last-child {
             margin-bottom: 0;
         }
